--- a/src/Components/caixaBoasCompras.css
+++ b/src/Components/caixaBoasCompras.css
@@ -9,7 +9,8 @@
 
     display: flex;              
     align-items: center;        
-    gap: 10px;                  
+    gap: 10px;  
+    margin-left: -2%;                
 }
 
 .textoCaixa {
