--- a/src/Components/carrossel.css
+++ b/src/Components/carrossel.css
@@ -8,6 +8,7 @@
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   position: relative;
   box-sizing: border-box;
+  
 }
 
 
@@ -63,6 +64,7 @@
     max-width: 90%;      
     padding: 15px;
     margin-left: 43%;
+
   }
 }
 
@@ -91,8 +93,10 @@
   .carrossel-wrapper {
     width: 95vw;
     padding: 10px;
-    margin: 20px auto 20px 0;
-    margin-left: 4vw;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    margin-right: 0;
     max-width: none;
   }
 }
@@ -102,5 +106,12 @@
     max-width: 90%;      
     padding: 15px;
     margin-left: 18%;
+  }
+}@media (max-width: 500px){
+  .carrossel-wrapper{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: none;
   }
 }
