--- a/src/Pages/AcessoriosCelular.css
+++ b/src/Pages/AcessoriosCelular.css
@@ -38,8 +38,8 @@
     background-color: #3269df;
     border-radius: 11px;
 
-    width: fit-content;        /* deixa o botão do tamanho do conteúdo */
-    padding: 8px 16px;         /* altura e largura */
+    width: fit-content;       
+    padding: 8px 16px;         
     font-size: 16px;
 
     display: inline-block;
