--- a/src/Components/lupaPesquisa.css
+++ b/src/Components/lupaPesquisa.css
@@ -1,9 +1,11 @@
-.Lupa-input{
-    border-color: rgb(133, 133, 133);
+.Lupa-input {
+    border: 1px solid rgb(133, 133, 133);
     border-radius: 16px;
     width: 20%;
     padding: 8px;
     font-size: 16px;
-    margin-left: 2%
-    
+
+    display: block;        
+    margin: 0 auto;         /* ⬅ centraliza no centro da tela */
+    text-align: center;     /* ⬅ centraliza texto + ícone */
 }
